# boycott_platform

./: .env_dev_example  .env_example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  celerybeat-schedule  data.sql  manage.py  pyproject.toml
apps/account/: admin.py  urls.py
apps/account/forms/: authentication.py  profile.py  registration.py
apps/account/migrations/: 0001_initial.py  0002_alter_invitation_user.py
apps/account/models/: __init__.py  code.py  email_verification.py  user.py
apps/account/services/: registration.py
apps/account/views/: authentication.py  password.py  profile.py  registration.py
apps/assistant/: forms.py  routing.py  urls.py  views.py
apps/assistant/migrations/: 0001_initial.py
apps/assistant/models/: __init__.py  product_embedding.py
apps/assistant/services/: ask.py  boycott_assitant.py  chat_ai.py  consumers.py  embedding.py  rag.py
apps/assistant/templates/: about_us.html  ai_chat.html  ask.html  base.html  boycott_assistant.html  chat.html  chat_ai_gpt.html  contact.html  index.html  product_assistant.html  product_card.html  rag.html  (+2 more)
apps/core/: models.py  tasks.py
apps/product/: admin.py  apps.py  signals.py  translation.py
boycott_platform/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
boycott_platform/settings/: base.py  dev.py  environment.py  prod.py
config/docker/: .dockerignore  Dockerfile  Makefile  docker-compose.yaml
config/nginx/: Makefile  boycott_platform.conf
selery/: app.py
static/css/: styles.css
templates/: 404.html  base.html
templates/account/: registration.html
(+32 files in other folders)
