[tool.isort]
profile = "black"

[tool.poetry]
name = "boycott-platform"
version = "0.1.0"
description = ""
authors = ["KenArsen <kenzhegulov.kgz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10 || ^3.11 || ^3.12 || ^3.13"
django = "^5.2"
pillow = "^11.1.0"
django-jazzmin = "^3.0.1"
environs = "^14.1.1"
celery = "^5.5.0"
dj-database-url = "^2.3.0"
redis = "^5.2.1"
psycopg2-binary = "^2.9.10"
django-modeltranslation = "^0.19.13"
requests = "^2.32.3"
channels = "^4.2.2"
daphne = "^4.1.2"
channels-redis = "^4.2.1"
httpx = "^0.28.1"
langchain = "^0.3.24"
langchain-community = "^0.3.22"
langchain-openai = "^0.3.14"
chromadb = "^1.0.7"
tiktoken = "^0.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"
black = "^25.1.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
